--- a/action.yml
+++ b/action.yml
@@ -1,25 +1,43 @@
-name: "Helm Chart Releaser"
-description: "Host a Helm charts repo on GitHub Pages"
-author: "The Helm authors"
+name: 'Helm Chart Releaser'
+description: 'Host a Helm charts repo on GitHub Pages'
+author: 'The Helm authors'
 branding:
   color: blue
   icon: anchor
 inputs:
   version:
-    description: "The chart-releaser version to use (default: v1.2.0)"
+    description: 'The chart-releaser version to use (default: v1.2.0)'
+    required: false
   config:
-    description: "The relative path to the chart-releaser config file"
+    description: 'The relative path to the chart-releaser config file'
+    required: false
   charts_dir:
     description: The charts directory
     default: charts
+    required: false
   charts_repo_url:
-    description: "The GitHub Pages URL to the charts repo (default: https://<owner>.github.io/<repo>)"
+    description: 'The GitHub Pages URL to the charts repo (default: https://<owner>.github.io/<repo>)'
+    required: false
+  owner:
+    description: 'The GitHub repo owner, either user or organization (default: current repository owner)'
+    required: false
+  repo:
+    description: 'The GitHub repo, without owner (default: current repository owner)'
+    required: false
 runs:
   using: composite
   steps:
     - run: |
         owner=$(cut -d '/' -f 1 <<< "$GITHUB_REPOSITORY")
         repo=$(cut -d '/' -f 2 <<< "$GITHUB_REPOSITORY")
+
+        if [[ -n "${{ inputs.owner }}" ]]; then
+            owner="${{ inputs.owner }}"
+        fi
+
+        if [[ -n "${{ inputs.repo }}" ]]; then
+            repo="${{ inputs.repo }}"
+        fi
 
         args=(--owner "$owner" --repo "$repo")
         args+=(--charts-dir "${{ inputs.charts_dir }}")
